--- a/sorting.qsf
+++ b/sorting.qsf
@@ -55,5 +55,7 @@ set_global_assignment -name SYSTEMVERILOG_FILE src/ram_memory.sv
 set_global_assignment -name SYSTEMVERILOG_FILE src/inp_comb.sv
 set_global_assignment -name POWER_PRESET_COOLING_SOLUTION "23 MM HEAT SINK WITH 200 LFPM AIRFLOW"
 set_global_assignment -name POWER_BOARD_THERMAL_MODEL "NONE (CONSERVATIVE)"
-set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
 set_global_assignment -name SYSTEMVERILOG_FILE src/sorter.sv
+set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
+set_global_assignment -name SYSTEMVERILOG_FILE src/mem_ctrl.sv
+set_global_assignment -name SYSTEMVERILOG_FILE src/fsm.sv
